--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "colin li, jerry gong, owin gong",
   "license": "ISC",
   "dependencies": {
+    "csv": "^6.3.5",
     "express": "^4.18.2"
   }
 }
