--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "csv": "^6.3.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "socket.io": "^4.7.2"
   }
 }
